# STM32H743I-EVAL2

./: .gitignore  .mxproject  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CMakeUserPresets.json.Template  CODEOWNERS  README.md  STM32H743I-EVAL2.ioc
.github/: PULL_REQUEST_TEMPLATE.md  settings.yml
.github/workflows/: build.yaml  main.yaml  pr-validation.yaml  probot-settings.yml  xxbuild.yaml
Core/Inc/: adc.h  fmc.h  main.h  sai.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  usart.h  usb_otg.h
Core/Src/: adc.c  dfsdm.c  eth.c  gpio.c  i2c.c  ltdc.c  main.c  quadspi.c  sai.c  sdmmc.c  stm32h7xx_hal_msp.c  stm32h7xx_hal_timebase_tim.c  stm32h7xx_it.c  usart.c  usb_otg.c
MDK-ARM/: STM32H743I-EVAL2.uvoptx  STM32H743I-EVAL2.uvprojx
__ozone/: STM32H743I-EVAL2.jdebug
cmake/: MockList.cmake  arm_cc.cmake  banshi.cmake  cmockhelper.cmake  cmsis.cmake  create_mocks.rb  flasher.cmake  gcc_cortexM7.cmake  hal.cmake  hw_unit_tests.cmake  jerase.jlink  jflash.in  lib_cmsis.cmake  lib_hal.cmake  mock_config.yml  mock_hal.cmake  os2.cmake  sw_unit_tests.cmake  testBANSHI.cmake  utils.cmake  x86_64_cc.cmake
cmake/mocks/: mock_temp.c  mock_temp.h
cubemx/: Hillrom_MotorController_STM32H743.ioc  Makefile  STM32H743XIHx_FLASH.ld  eval2.ioc
cubemx/Core/Inc/: dfsdm.h  main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  tim.h  usart.h
cubemx/Core/Src/: adc.c  crc.c  dac.c  fdcan.c  fmc.c  gpio.c  i2c.c  ltdc.c  main.c  sdmmc.c  spi.c  stm32h7xx_it.c  tim.c  usart.c  usb_otg.c
demo/: CMakeLists.txt  demo.c  demo.h
demo/__linker/: ac6_arm.sct  gcc_arm.ld  llvm_arm.ld
demo/__startup/: __vectors.c  __vectors_ac6.h  __vectors_gcc.h  __vectors_llvm.h
plantUML/: ComponentView.puml
unity/: CMakeLists.txt  blinky_unity.c
unity/blinky/: CMakeLists.txt  blinky_unity.c  blinky_unity.h
unity/blinky/mytypes/: mytypes.h
unity/blinky/temp/: temp.c  temp.h
unity/blinky/test/: CMakeLists.txt
unity/config/: RS232_helper.c  RS232_helper.h  unity_config.h
unity/test/: CMakeLists.txt  ut_blinky_unity.c
unity/tests/: CMakeLists.txt
unity/tests/includes/: ut_blinky_unity.h
unity/tests/sources/: ut_blinky_unity.c
